@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-09T00:50:06Z",
+  "timestamp" : "2022-04-09T16:14:32Z",
   "count_outdated" : 237,
   "uniques_outdated" : 110,
-  "count" : 251,
-  "uniques" : 119,
+  "count" : 252,
+  "uniques" : 120,
   "clones" : [
     {
       "timestamp": "2022-03-29T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-04-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
